--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "vasu-playwright-utils": "^1.14.1"
   },
   "dependencies": {
-    "@aws-sdk/client-cognito-identity-provider": "3.556.0",
-    "@aws-sdk/client-dynamodb": "3.556.0",
-    "@aws-sdk/client-lambda": "3.556.0",
-    "@aws-sdk/client-s3": "3.556.0",
-    "@aws-sdk/lib-dynamodb": "3.556.0",
+    "@aws-sdk/client-cognito-identity-provider": "3.569.0",
+    "@aws-sdk/client-dynamodb": "3.569.0",
+    "@aws-sdk/client-lambda": "3.569.0",
+    "@aws-sdk/client-s3": "3.569.0",
+    "@aws-sdk/lib-dynamodb": "3.569.0",
     "@ihf-rivendell/qa": "0.3.107"
   },
   "scripts": {
@@ -26,7 +26,7 @@
     "test": "playwright test",
     "test:chromium": "playwright test --retries 0 --project=chromiumheadless",
     "test:chromium-headed": "playwright test -j 1 --retries 0 --headed --project=chromium",
-    "debug": "npx playwright test --debug --project=chrome",
+    "debug": "npx playwright test --debug --project=setup",
     "local": "playwright test -j 1 --retries 0 --headed --project=chromium",
     "test:reg": "playwright test --project=chromiumheadless --grep-invert '@fail'",
     "test:smoke": "playwright test --project=chromiumheadless -g '@smoke'",
@@ -38,7 +38,7 @@
     "allure": "allure generate ./allure-results --clean && allure open ./allure-report",
     "lint": "cross-env eslint 'tests/**/*.ts' 'test-setup/**/*.ts' 'playwright.config.ts' '.eslintrc.js'",
     "lint:fix": "cross-env eslint 'tests/**/*.ts' 'test-setup/**/*.ts' 'playwright.config.ts' '.eslintrc.js' --fix",
-    "format": "cross-env prettier --write 'tests/**/*.ts' 'test-setup/**/*.ts' 'playwright.config.ts' '.eslintrc.js' '**/*.json' '**/*.md' '!package-lock.json' '!dist/**/*' '!build/**/*'",
+    "prettier": "cross-env prettier --write 'tests/**/*.ts' 'test-setup/**/*.ts' 'playwright.config.ts' '.eslintrc.js' '**/*.json' '**/*.md' '!package-lock.json' '!dist/**/*' '!build/**/*'",
     "prepare": "husky",
     "postinstall": "playwright install chromium"
   },
