--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
     "type": "git",
     "url": "https://github.com/vasu31dev/playwright-ts-template.git"
   },
-  "devDependencies": {
-    "vasu-playwright-utils": "^1.14.1"
-  },
   "dependencies": {
     "@aws-sdk/client-cognito-identity-provider": "3.569.0",
     "@aws-sdk/client-dynamodb": "3.569.0",
     "@aws-sdk/client-lambda": "3.569.0",
     "@aws-sdk/client-s3": "3.569.0",
     "@aws-sdk/lib-dynamodb": "3.569.0",
-    "@ihf-rivendell/qa": "0.3.107"
+    "@faker-js/faker": "^8.4.1",
+    "@ihf-rivendell/qa": "0.3.107",
+    "@playwright/test": "^1.44.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^18.0.0",
+    "vasu-playwright-utils": "^1.14.1"
   },
   "scripts": {
     "clean": "rimraf dist",
@@ -36,9 +38,9 @@
     "record": "playwright codegen",
     "clear:storage": "rimraf playwright/.auth",
     "allure": "allure generate ./allure-results --clean && allure open ./allure-report",
-    "lint": "cross-env eslint 'tests/**/*.ts' 'test-setup/**/*.ts' 'playwright.config.ts' '.eslintrc.js'",
-    "lint:fix": "cross-env eslint 'tests/**/*.ts' 'test-setup/**/*.ts' 'playwright.config.ts' '.eslintrc.js' --fix",
-    "prettier": "cross-env prettier --write 'tests/**/*.ts' 'test-setup/**/*.ts' 'playwright.config.ts' '.eslintrc.js' '**/*.json' '**/*.md' '!package-lock.json' '!dist/**/*' '!build/**/*'",
+    "lint": "cross-env eslint 'tests/**/*.ts' 'test-setup/**/*.ts' 'playwright.config.ts' '.eslintrc.json'",
+    "lint:fix": "cross-env eslint 'tests/**/*.ts' 'test-setup/**/*.ts' 'playwright.config.ts' '.eslintrc.json' --fix",
+    "prettier": "cross-env prettier --write 'tests/**/*.ts' 'test-setup/**/*.ts' 'playwright.config.ts' '.eslintrc.json' '**/*.json' '**/*.md' '!package-lock.json' '!dist/**/*' '!build/**/*'",
     "prepare": "husky",
     "postinstall": "playwright install chromium"
   },
@@ -48,7 +50,6 @@
     }
   },
   "lint-staged": {
-    "*.{json,md}": "cross-env prettier --write",
     "{*.ts,.eslintrc.js}": [
       "cross-env eslint --fix",
       "cross-env prettier --write"
