feat: Firts Commit

--- a/package.json
+++ b/package.json
@@ -2,6 +2,31 @@
   "name": "playwright-ts-template",
   "version": "1.0.0",
   "description": "",
+  "scripts": {
+    "clean": "rimraf dist",
+    "prebuild": "npm run clean",
+    "build": "tsc",
+    "validate": "tsc --noEmit",
+    "ready": "rimraf dist node_modules package-lock.json && npm i",
+    "test": "playwright test",
+    "test:chromium": "playwright test --retries 0 --project=chromiumheadless",
+    "test:chromium-headed": "playwright test -j 1 --retries 0 --headed --project=chromium",
+    "debug": "npx playwright test --debug --project=chromium",
+    "local": "playwright test -j 1 --retries 0 --headed --project=chromium",
+    "test:reg": "playwright test --project=chromiumheadless --grep-invert '@fail'",
+    "test:smoke": "playwright test --project=chromiumheadless -g '@smoke'",
+    "report": "playwright show-report playwright-report",
+    "ui": "playwright test --project=chromiumheadless --ui-port 0",
+    "trace": "playwright show-trace --port 0",
+    "record": "playwright codegen",
+    "clear:storage": "rimraf playwright/.auth",
+    "allure": "allure generate ./allure-results --clean && allure open ./allure-report",
+    "lint": "cross-env eslint 'tests/**/*.ts' 'test-setup/**/*.ts' 'playwright.config.ts' '.eslintrc.json' 'playwright/**/*.ts'",
+    "lint:fix": "cross-env eslint 'tests/**/*.ts' 'test-setup/**/*.ts' 'playwright.config.ts' '.eslintrc.json' 'playwright/**/*.ts' --fix",
+    "prettier": "cross-env prettier --write 'tests/**/*.ts' 'playwright/**/*.ts' 'test-setup/**/*.ts' 'playwright.config.ts' '.eslintrc.json' '**/*.json' '**/*.md' '!package-lock.json' '!dist/**/*' '!build/**/*'",
+    "prepare": "husky",
+    "postinstall": "playwright install chromium"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/vasu31dev/playwright-ts-template.git"
@@ -18,31 +43,6 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^18.0.0",
     "vasu-playwright-utils": "^1.14.1"
-  },
-  "scripts": {
-    "clean": "rimraf dist",
-    "prebuild": "npm run clean",
-    "build": "tsc",
-    "validate": "tsc --noEmit",
-    "ready": "rimraf dist node_modules package-lock.json && npm i",
-    "test": "playwright test",
-    "test:chromium": "playwright test --retries 0 --project=chromiumheadless",
-    "test:chromium-headed": "playwright test -j 1 --retries 0 --headed --project=chromium",
-    "debug": "npx playwright test --debug --project=setup",
-    "local": "playwright test -j 1 --retries 0 --headed --project=chromium",
-    "test:reg": "playwright test --project=chromiumheadless --grep-invert '@fail'",
-    "test:smoke": "playwright test --project=chromiumheadless -g '@smoke'",
-    "report": "playwright show-report playwright-report",
-    "ui": "playwright test --project=chromiumheadless --ui-port 0",
-    "trace": "playwright show-trace --port 0",
-    "record": "playwright codegen",
-    "clear:storage": "rimraf playwright/.auth",
-    "allure": "allure generate ./allure-results --clean && allure open ./allure-report",
-    "lint": "cross-env eslint 'tests/**/*.ts' 'test-setup/**/*.ts' 'playwright.config.ts' '.eslintrc.json'",
-    "lint:fix": "cross-env eslint 'tests/**/*.ts' 'test-setup/**/*.ts' 'playwright.config.ts' '.eslintrc.json' --fix",
-    "prettier": "cross-env prettier --write 'tests/**/*.ts' 'test-setup/**/*.ts' 'playwright.config.ts' '.eslintrc.json' '**/*.json' '**/*.md' '!package-lock.json' '!dist/**/*' '!build/**/*'",
-    "prepare": "husky",
-    "postinstall": "playwright install chromium"
   },
   "husky": {
     "hooks": {
