--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
     "import/no-cycle": "off",
     "func-names": "off",
     "no-empty-pattern": "off",
-    "@typescript-eslint/no-unused-expressions": "off"
+    "@typescript-eslint/no-unused-expressions": "off",
+    "import/no-extraneous-dependencies": "off"
   }
 }
