--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "validate": "tsc --noEmit",
     "ready": "rimraf dist node_modules package-lock.json && npm i",
-    "test": "playwright test",
+    "test": "playwright test --project=chromium",
     "test:chromium": "playwright test --retries 0 --project=chromiumheadless",
     "test:chromium-headed": "playwright test -j 1 --retries 0 --headed --project=chromium",
     "debug": "npx playwright test --debug --project=chromium",
