--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
   "description": "",
   "scripts": {
     "clean": "rimraf dist",
+    "co:login": "aws codeartifact login --tool npm --repository qa --domain rivendell",
     "prebuild": "npm run clean",
     "build": "tsc",
     "validate": "tsc --noEmit",
-    "ready": "rimraf dist node_modules package-lock.json && npm i",
-    "test": "playwright test --project=chromium",
-    "test:chromium": "playwright test --retries 0 --project=chromiumheadless",
-    "test:chromium-headed": "playwright test -j 1 --retries 0 --headed --project=chromium",
-    "debug": "npx playwright test --debug --project=chromium",
-    "local": "playwright test -j 1 --retries 0 --headed --project=chromium",
-    "test:reg": "playwright test --project=chromiumheadless --grep-invert '@fail'",
-    "test:smoke": "playwright test --project=chromiumheadless -g '@smoke'",
+    "ready": "rimraf dist node_modules package-lock.json && npm run co:login && npm i",
+    "test": "playwright test --project=chromium_headless_desktop",
+    "test:ci": "playwright test",
+    "test:chrome": "playwright test -j 1 --retries 0 --headed --project=chromium_headless_desktop",
+    "debug": "npx playwright test --debug --project=chromium_headless_desktop",
+    "local": "playwright test -j 1 --retries 0 --headed --project=chromium_headless_desktop",
+    "test:reg": "playwright test --project=chromium_headless_desktop --grep-invert '@fail'",
+    "test:smoke": "playwright test --project=chromium_headless_desktop -g '@smoke'",
     "report": "playwright show-report playwright-report",
-    "ui": "playwright test --project=chromiumheadless --ui-port 0",
+    "ui": "playwright test --project=chromium_headless_desktop --ui-port 0",
     "trace": "playwright show-trace --port 0",
     "record": "playwright codegen",
     "clear:storage": "rimraf playwright/.auth",
