feat: Firts Commit

--- a/package.json
+++ b/package.json
@@ -56,8 +56,7 @@
   "lint-staged": {
     "{*.ts,.eslintrc.js}": [
       "cross-env eslint --fix",
-      "cross-env prettier --write",
-      "cross-env rimraf dist playwright-report test-results"
+      "cross-env prettier --write"
     ]
   },
   "devDependencies": {
