--- a/package.json
+++ b/package.json
@@ -1,31 +1,30 @@
 {
   "name": "playwright-ts-template",
   "version": "0.0.1",
-  "description": "",
+  "description": "end-to-end tests",
   "scripts": {
+    "build": "tsc",
+    "clear:storage": "rimraf playwright/.auth",
     "clean": "rimraf dist",
     "co:login": "aws codeartifact login --tool npm --repository qa --domain rivendell",
-    "prebuild": "npm run clean",
-    "build": "tsc",
-    "validate": "tsc --noEmit",
-    "ready": "rimraf dist node_modules package-lock.json && npm run co:login && npm i",
-    "test": "playwright test --project=chromium_headless_desktop",
-    "test:ci": "playwright test",
-    "test:chrome": "playwright test -j 1 --retries 0 --headed --project=chromium_headless_desktop",
     "debug": "npx playwright test --debug --project=chromium_headless_desktop",
-    "local": "playwright test -j 1 --retries 0 --headed --project=chromium_headless_desktop",
-    "test:reg": "playwright test --project=chromium_headless_desktop --grep-invert '@fail'",
-    "test:smoke": "playwright test --project=chromium_headless_desktop -g '@smoke'",
-    "report": "playwright show-report playwright-report",
-    "ui": "playwright test --project=chromium_headless_desktop --ui-port 0",
-    "trace": "playwright show-trace --port 0",
-    "record": "playwright codegen",
-    "clear:storage": "rimraf playwright/.auth",
     "lint": "cross-env eslint 'tests/**/*.ts' 'test-setup/**/*.ts' 'playwright.config.ts' '.eslintrc.json' 'playwright/**/*.ts'",
     "lint:fix": "cross-env eslint 'tests/**/*.ts' 'test-setup/**/*.ts' 'playwright.config.ts' '.eslintrc.json' 'playwright/**/*.ts' --fix",
-    "prettier": "cross-env prettier --write 'tests/**/*.ts' 'playwright/**/*.ts' 'test-setup/**/*.ts' 'playwright.config.ts' '.eslintrc.json' '**/*.json' '**/*.md' '!package-lock.json' '!dist/**/*' '!build/**/*'",
+    "local": "playwright test -j 1 --retries 0 --headed --project=chromium_headless_desktop",
+    "prebuild": "npm run clean",
     "prepare": "npx husky",
-    "postinstall": "playwright install chromium"
+    "prettier": "cross-env prettier --write 'tests/**/*.ts' 'playwright/**/*.ts' 'test-setup/**/*.ts' 'playwright.config.ts' '.eslintrc.json' '**/*.json' '**/*.md' '!package-lock.json' '!dist/**/*' '!build/**/*'",
+    "record": "playwright codegen",
+    "report": "playwright show-report playwright-report",
+    "ready": "rimraf dist node_modules package-lock.json && npm run co:login && npm i",
+    "test": "playwright test --project=chromium_headless_desktop",
+    "test:chrome": "playwright test -j 1 --retries 0 --headed --project=chromium_headless_desktop",
+    "test:ci": "playwright test",
+    "test:reg": "playwright test --project=chromium_headless_desktop --grep-invert '@fail'",
+    "test:smoke": "playwright test --project=chromium_headless_desktop -g '@smoke'",
+    "trace": "playwright show-trace --port 0",
+    "ui": "playwright test --project=chromium_headless_desktop --ui-port 0",
+    "validate": "tsc --noEmit"
   },
   "repository": {
     "type": "git",
